# kmera

./: .coveragerc  .gitignore  LICENSE  README.md  coverage.xml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: lint.yml  python-ci.yml  tests.yml
scripts/development/: test.sh
src/cli/: main.py  naming.py
src/common/: enums.py
src/constants/: image.py
src/core/: namer.py  processor.py
src/data/: file.py  folder.py
src/metadata/: photo.py
tests/cli/: test_main.py  test_naming.py
tests/common/: test_enums.py
tests/core/: test_namer.py  test_processor.py
tests/data/: test_file.py  test_folder.py
tests/metadata/: test_photo.py
