[project]
name = "kmera"
version = "0.1.0"
description = ""
authors = [
    { name = "Tu Nombre", email = "tu@email.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "requests",
    "flask",
    "fire>=0.7.0",
    "pydantic>=2.11.7",
    "exifread>=3.4.0",
]

[tool.uv]  
# Opcional: aquí podrías configurar más opciones de uv