[project]
name = "kmera"
version = "0.1.0"
description = ""
authors = [
    { name = "Tu Nombre", email = "tu@email.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "requests",
    "flask",
    "fire>=0.7.0",
    "pydantic>=2.11.7",
    "exifread>=3.4.0",
    "tqdm>=4.67.1",
    "opencv-python>=4.12.0.88",
    "piexif>=1.1.3",
    "pillow>=11.3.0",
]

[project.optional-dependencies]
format = ["ruff>=0.1.14"]
test = [
  "pytest>=7.4.4",
  "pytest-cov>=4.1.0"
]
